@@ -1,5 +1,11 @@
 2010-03-05 Emilio Meschi <emilio.meschi@cern.ch>
 
+	* tag V00-07-06 (00-07-05 used by Bill for warning removal)
+	* catch xdata::Exception when publishing to infospace 
+	(trouble when restarting from halted)
+
+2010-03-05 Emilio Meschi <emilio.meschi@cern.ch>
+
 	* tag V00-07-04
 	* fixes for correct updating of DQM histos to SM
 	
